--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="grey">#F5F5F5</color>
+    <color name="darker_grey">#696969</color>
+    <color name="orange">#F99D1C</color>
 </resources>
