--- a/app/src/main/res/layout/fragment_games.xml
+++ b/app/src/main/res/layout/fragment_games.xml
@@ -39,4 +39,14 @@
         tools:itemCount="10"
         tools:listitem="@layout/item_games" />
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        app:layout_anchorGravity="bottom|end"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/ic_sort_black_24dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
