--- a/app/src/main/res/layout/item_deals.xml
+++ b/app/src/main/res/layout/item_deals.xml
@@ -55,6 +55,7 @@
                 android:paddingTop="4dp"
                 android:paddingRight="8dp"
                 android:paddingBottom="4dp"
+                android:layout_marginEnd="4dp"
                 android:textColor="@color/black"
                 android:textSize="14sp"
                 android:textStyle="bold"
